Vanilla Javascript Project END

--- a/Index.html
+++ b/Index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
     <title>Todo List</title>
 </head>
 <body>
-    <h1>Hello world</h1>
+
+    <header>
+    <h1>YR Todo List</h1>
+    </header>
+    <form>
+         <input type="text" class="todo-input">
+         <button class="todo-button" type="submit">
+            <i class="fa-sharp fa-solid fa-plus"></i>
+         </button>
+         <div class="select">
+            <select name="todos" class="filter-todo">
+                <option value="all">ALL</option>
+                <option value="completed">COMPLETD</option>
+                <option value="uncompleted">UNCOMPLETED</option>
+            </select>
+         </div>
+    </form>
+    <div class="todo-container">
+        <ul class="todo-list"></ul>
+    </div>
+    <script src="app.js"></script>
 </body>
 </html>
